tests/baselines/reference/jsxInvalidEsprimaTestSuite.errors.txt
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(2,2): error TS1003: Identifier expected.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(3,3): error TS1003: Identifier expected.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(4,2): error TS1003: Identifier expected.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(5,6): error TS1005: '{' expected.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(5,9): error TS1109: Expression expected.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(5,10): error TS1109: Expression expected.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(6,1): error TS1003: Identifier expected.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(7,4): error TS17002: Expected corresponding JSX closing tag for 'a'.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(8,13): error TS1002: Unterminated string literal.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(9,1): error TS1003: Identifier expected.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(9,3): error TS1003: Identifier expected.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(9,6): error TS17002: Expected corresponding JSX closing tag for 'a'.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(10,3): error TS1003: Identifier expected.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(10,5): error TS1003: Identifier expected.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(10,11): error TS1005: '>' expected.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(11,5): error TS1003: Identifier expected.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(11,13): error TS1005: '>' expected.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(12,8): error TS17002: Expected corresponding JSX closing tag for 'a.b.c'.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(13,2): error TS1003: Identifier expected.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(13,7): error TS1003: Identifier expected.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(14,4): error TS1003: Identifier expected.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(14,9): error TS1003: Identifier expected.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(15,3): error TS1003: Identifier expected.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(15,12): error TS1005: '>' expected.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(16,3): error TS1003: Identifier expected.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(16,14): error TS1005: '>' expected.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(21,10): error TS1005: '}' expected.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(21,11): error TS1012: Unexpected token.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(21,13): error TS1003: Identifier expected.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(21,14): error TS1005: '>' expected.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(21,14): error TS2304: Cannot find name 'a'.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(21,16): error TS1109: Expression expected.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(22,20): error TS1003: Identifier expected.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(23,15): error TS1003: Identifier expected.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(24,7): error TS1005: '...' expected.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(26,17): error TS1005: '>' expected.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(26,18): error TS1109: Expression expected.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(26,26): error TS1012: Unexpected token.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(26,27): error TS1109: Expression expected.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(26,28): error TS1109: Expression expected.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(27,28): error TS1005: '>' expected.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(27,29): error TS1129: Statement expected.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(27,32): error TS2304: Cannot find name 'props'.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(27,38): error TS1109: Expression expected.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(27,39): error TS1109: Expression expected.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(31,6): error TS1005: '{' expected.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(32,7): error TS1003: Identifier expected.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(32,8): error TS1109: Expression expected.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(32,9): error TS1109: Expression expected.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(33,2): error TS2304: Cannot find name 'a'.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(33,4): error TS1109: Expression expected.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(33,6): error TS1003: Identifier expected.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(33,7): error TS1005: '>' expected.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(33,7): error TS2304: Cannot find name 'a'.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(33,9): error TS1109: Expression expected.
tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx(34,4): error TS1003: Identifier expected.


==== tests/cases/conformance/jsx/jsxInvalidEsprimaTestSuite.tsx (56 errors) ====
    
    </>;
     ~
!!! error TS1003: Identifier expected.
    <a: />;
      ~
!!! error TS1003: Identifier expected.
    <:a />;
     ~
!!! error TS1003: Identifier expected.
    <a b=d />;
         ~
!!! error TS1005: '{' expected.
            ~
!!! error TS1109: Expression expected.
             ~
!!! error TS1109: Expression expected.
    <a>;
    ~
!!! error TS1003: Identifier expected.
    <a></b>;
       ~~~~
!!! error TS17002: Expected corresponding JSX closing tag for 'a'.
    <a foo="bar;
                
!!! error TS1002: Unterminated string literal.
    <a:b></b>;
    ~
!!! error TS1003: Identifier expected.
      ~
!!! error TS1003: Identifier expected.
         ~~~~
!!! error TS17002: Expected corresponding JSX closing tag for 'a'.
    <a:b.c></a:b.c>;
      ~
!!! error TS1003: Identifier expected.
        ~
!!! error TS1003: Identifier expected.
              ~
!!! error TS1005: '>' expected.
    <a.b:c></a.b:c>;
        ~
!!! error TS1003: Identifier expected.
                ~
!!! error TS1005: '>' expected.
    <a.b.c></a>;
           ~~~~
!!! error TS17002: Expected corresponding JSX closing tag for 'a.b.c'.
    <.a></.a>;
     ~
!!! error TS1003: Identifier expected.
          ~
!!! error TS1003: Identifier expected.
    <a.></a.>;
       ~
!!! error TS1003: Identifier expected.
            ~
!!! error TS1003: Identifier expected.
    <a[foo]></a[foo]>;
      ~
!!! error TS1003: Identifier expected.
               ~
!!! error TS1005: '>' expected.
    <a['foo']></a['foo']>;
      ~
!!! error TS1003: Identifier expected.
                 ~
!!! error TS1005: '>' expected.
    <a><a />;
    <a b={}>;
    var x = <div>one</div><div>two</div>;;
    var x = <div>one</div> /* intervening comment */ <div>two</div>;;
    <a>{"str";}</a>;
             ~
!!! error TS1005: '}' expected.
              ~
!!! error TS1012: Unexpected token.
                ~
!!! error TS1003: Identifier expected.
                 ~
!!! error TS1005: '>' expected.
                 ~
!!! error TS2304: Cannot find name 'a'.
                   ~
!!! error TS1109: Expression expected.
    <span className="a", id="b" />;
                       ~
!!! error TS1003: Identifier expected.
    <div className"app">;
                  ~~~~~
!!! error TS1003: Identifier expected.
    <div {props} />;
          ~~~~~
!!! error TS1005: '...' expected.
    
    <div>stuff</div {...props}>;
                    ~
!!! error TS1005: '>' expected.
                     ~~~
!!! error TS1109: Expression expected.
                             ~
!!! error TS1012: Unexpected token.
                              ~
!!! error TS1109: Expression expected.
                               ~
!!! error TS1109: Expression expected.
    <div {...props}>stuff</div {...props}>;
                               ~
!!! error TS1005: '>' expected.
                                ~~~
!!! error TS1129: Statement expected.
                                   ~~~~~
!!! error TS2304: Cannot find name 'props'.
                                         ~
!!! error TS1109: Expression expected.
                                          ~
!!! error TS1109: Expression expected.
    
    <a>></a>;
    <a> ></a>;
    <a b=}>;
         ~
!!! error TS1005: '{' expected.
    <a b=<}>;
          ~
!!! error TS1003: Identifier expected.
           ~
!!! error TS1109: Expression expected.
            ~
!!! error TS1109: Expression expected.
    <a>}</a>;
     ~
!!! error TS2304: Cannot find name 'a'.
       ~
!!! error TS1109: Expression expected.
         ~
!!! error TS1003: Identifier expected.
          ~
!!! error TS1005: '>' expected.
          ~
!!! error TS2304: Cannot find name 'a'.
            ~
!!! error TS1109: Expression expected.
    <a .../*hai*/asdf/>;
       ~~~
!!! error TS1003: Identifier expected.